--- a/games/cartaMayor/styles.css
+++ b/games/cartaMayor/styles.css
@@ -49,7 +49,7 @@
     width: 100%;
     height: 100%;
     background-color: #333;
-    background-image: url('games/cartaMayor/images/carta.SVG');
+    background-image: url('images/carta.SVG');
     background-size: cover;
     background-position: center;
     position: absolute;
